--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-masonry-css": "^1.0.16",
     "unsplash-js": "^7.0.18",
     "zustand": "^4.3.9"
   },
