--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "babel-plugin-macros": "^3.1.0",
-    "module-alias": "^2.2.3",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
-    "unsplash-js": "^7.0.18",
-    "zustand": "^4.3.9"
+    "unsplash-js": "^7.0.18"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
