--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "components/Post"  ],
   "exclude": [
     "node_modules"
   ]
